--- a/proyecto-gestion-cine/src/components/reports/advertisement-purchased-report.component/advertisement-purchased-report.component.html
+++ b/proyecto-gestion-cine/src/components/reports/advertisement-purchased-report.component/advertisement-purchased-report.component.html
@@ -21,7 +21,7 @@
         <div class="col-md-4">
           <label for="tipoAnuncio" class="form-label">Tipo de Anuncio</label>
           <select id="tipoAnuncio" class="form-control" formControlName="tipoAnuncio">
-            <option value="">Seleccione un filtro</option>
+            <option value="" disabled>Seleccione un filtro</option>
             @for( tipo of tiposAnuncios; track tipo.length){
             <option [value]="tipo">{{ tipo }}</option>
             }
@@ -33,20 +33,27 @@
             class="btn-generate w-100"
             [disabled]="isLoading || reportForm.invalid"
           >
-            <span *ngIf="isLoading">Generando...</span>
-            <span *ngIf="!isLoading"><i class="bi bi-search"></i> Generar</span>
+            @if(isLoading){
+            <span>Generando...</span>
+            } @if(!isLoading){
+
+            <span><i class="bi bi-search"></i> Generar</span>
+            }
           </button>
         </div>
       </div>
     </form>
 
-    <div *ngIf="errorMessage" class="alert-error mt-3">
+    @if(errorMessage){
+    <div class="alert-error mt-3">
       <i class="bi bi-exclamation-triangle"></i>
       {{ errorMessage }}
     </div>
+    }
   </div>
 
-  <div *ngIf="report" class="table-responsive">
+  @if(report){
+  <div class="table-responsive">
     <table class="data-table">
       <thead>
         <tr>
@@ -70,4 +77,5 @@
       </tbody>
     </table>
   </div>
+  }
 </div>
