--- a/proyecto-gestion-cine/src/components/users/user-dashboard.component/user-dashboard.component.html
+++ b/proyecto-gestion-cine/src/components/users/user-dashboard.component/user-dashboard.component.html
@@ -12,7 +12,11 @@
 
     <div class="row g-4 justify-content-center mb-5">
       <div class="col-12 col-md-6 col-lg-4">
-        <div class="dashboard-card featured" routerLink="/user/cines" routerLinkActive="active">
+        <div
+          class="dashboard-card featured"
+          routerLink="/user/show-cinemas"
+          routerLinkActive="active"
+        >
           <div class="card-icon">
             <i class="bi bi-building"></i>
           </div>
